tests/error/if_exp_compat.gw
// [contains] incompatible types
maybe ? null : 1;
